chore(release): v3.2.6 - Sanitize NMS handlers, resolve lint warnings, remove dead code