@@ -4,8 +4,6 @@ import com.francobm.magicosmetics.MagicCosmetics;
 import com.francobm.magicosmetics.cache.Sound;
 import com.francobm.magicosmetics.cache.cosmetics.Spray;
 import com.francobm.magicosmetics.cache.renderer.ImageRenderer;
-import com.mojang.authlib.GameProfile;
-import com.mojang.authlib.properties.Property;
 import net.md_5.bungee.api.ChatColor;
 import org.bukkit.Bukkit;
 import org.bukkit.Color;
@@ -19,7 +17,6 @@ import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.*;
 import org.bukkit.map.MapPalette;
 import org.bukkit.map.MapView;
-import org.bukkit.profile.PlayerProfile;
 import org.bukkit.util.Vector;
 
 import javax.imageio.ImageIO;
@@ -29,8 +26,6 @@ import java.awt.image.ColorModel;
 import java.awt.image.WritableRaster;
 import java.io.File;
 import java.io.IOException;
-import java.lang.reflect.Field;
-import java.net.URL;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -45,7 +40,7 @@ public class Utils {
         return getVersion().contains("1.20.6") || getVersion().contains("1.21");
     }
 
-    public static String getVersion(){
+    public static String getVersion() {
         return Bukkit.getServer().getBukkitVersion().split("-")[0];
     }
 
@@ -58,7 +53,7 @@ public class Utils {
         return true;
     }
 
-    public static String getTime(int time){
+    public static String getTime(int time) {
         int hours = time / 3600;
         int i = time - hours * 3600;
         int minutes = i / 60;
@@ -66,8 +61,8 @@ public class Utils {
         String secondsMsg;
         String minutesMsg;
         String hoursMsg;
-        if(seconds < 10) {
-            if(seconds == 1) {
+        if (seconds < 10) {
+            if (seconds == 1) {
                 secondsMsg = "0" + seconds + " second";
             } else {
                 secondsMsg = "0" + seconds + " seconds";
@@ -75,8 +70,8 @@ public class Utils {
         } else {
             secondsMsg = seconds + " seconds";
         }
-        if(minutes < 10) {
-            if(minutes == 1) {
+        if (minutes < 10) {
+            if (minutes == 1) {
                 minutesMsg = "0" + minutes + " minute";
             } else {
                 minutesMsg = "0" + minutes + " minutes";
@@ -84,8 +79,8 @@ public class Utils {
         } else {
             minutesMsg = minutes + " minutes";
         }
-        if(hours < 10) {
-            if(hours == 1) {
+        if (hours < 10) {
+            if (hours == 1) {
                 hoursMsg = "0" + hours + " hour";
             } else {
                 hoursMsg = "0" + hours + " hours";
@@ -94,20 +89,21 @@ public class Utils {
             hoursMsg = hours + " hours";
         }
 
-        if(hours != 0)
-        {
+        if (hours != 0) {
             return hoursMsg + " " + minutesMsg + " " + secondsMsg;
-        }else if(minutes != 0) {
+        } else if (minutes != 0) {
             return minutesMsg + " " + secondsMsg;
         }
         return secondsMsg;
     }
 
     public static void sendSound(Player player, Sound sound) {
-        if(player == null) return;
-        if(sound == null) return;
+        if (player == null)
+            return;
+        if (sound == null)
+            return;
 
-        if(sound.isCustom()) {
+        if (sound.isCustom()) {
             player.playSound(player.getLocation(), sound.getSoundCustom(), sound.getYaw(), sound.getPitch());
             return;
         }
@@ -115,19 +111,21 @@ public class Utils {
     }
 
     public static void sendAllSound(Location location, Sound sound) {
-        if(location.getWorld() == null) return;
-        if(sound == null) return;
+        if (location.getWorld() == null)
+            return;
+        if (sound == null)
+            return;
 
-        if(sound.isCustom()) {
+        if (sound.isCustom()) {
             location.getWorld().playSound(location, sound.getSoundCustom(), sound.getYaw(), sound.getPitch());
             return;
         }
         location.getWorld().playSound(location, sound.getSoundBukkit(), sound.getYaw(), sound.getPitch());
     }
 
-    public static ItemStack getMapImage(Player player, BufferedImage image, Spray spray){
+    public static ItemStack getMapImage(Player player, BufferedImage image, Spray spray) {
         Color color = spray.getColor();
-        if(!spray.isPaint()) {
+        if (!spray.isPaint()) {
             if (color != null) {
                 Graphics2D g = image.createGraphics();
                 g.setPaint(new java.awt.Color(color.getRed(), color.getGreen(), color.getBlue(), 120));
@@ -138,12 +136,15 @@ public class Utils {
         MapView mapView = Bukkit.createMap(player.getWorld());
         mapView.getRenderers().clear();
         ImageRenderer imageRenderer = new ImageRenderer();
-        if(!imageRenderer.load(image)) return null;
+        if (!imageRenderer.load(image))
+            return null;
         mapView.addRenderer(imageRenderer);
         ItemStack map = XMaterial.FILLED_MAP.parseItem();
-        if(map == null) return null;
+        if (map == null)
+            return null;
         MapMeta meta = (MapMeta) map.getItemMeta();
-        if(meta == null) return null;
+        if (meta == null)
+            return null;
         meta.setMapView(mapView);
         map.setItemMeta(meta);
         return map;
@@ -156,14 +157,14 @@ public class Utils {
         return new BufferedImage(cm, raster, isAlphaPreMultiplied, null);
     }
 
-    public static BufferedImage getImage(String url){
+    public static BufferedImage getImage(String url) {
         BufferedImage image;
         try {
-            if(url.startsWith("http")) {
-                image = ImageIO.read(new URL(url));
-            }else{
+            if (url.startsWith("http")) {
+                image = ImageIO.read(java.net.URI.create(url).toURL());
+            } else {
                 File file = new File(MagicCosmetics.getInstance().getDataFolder(), "sprays/" + url);
-                if(!file.exists()) {
+                if (!file.exists()) {
                     return null;
                 }
                 image = ImageIO.read(file);
@@ -175,31 +176,33 @@ public class Utils {
         return image;
     }
 
-    public static boolean isDyeable(ItemStack itemStack){
-        if(itemStack == null) return false;
+    public static boolean isDyeable(ItemStack itemStack) {
+        if (itemStack == null)
+            return false;
         ItemMeta itemMeta = itemStack.getItemMeta();
-        return (itemMeta instanceof LeatherArmorMeta || itemMeta instanceof PotionMeta || itemMeta instanceof MapMeta || itemMeta instanceof FireworkEffectMeta);
+        return (itemMeta instanceof LeatherArmorMeta || itemMeta instanceof PotionMeta || itemMeta instanceof MapMeta
+                || itemMeta instanceof FireworkEffectMeta);
     }
 
-    public static void hidePlayer(Player player){
-        for(Player players : Bukkit.getOnlinePlayers()){
+    public static void hidePlayer(Player player) {
+        for (Player players : Bukkit.getOnlinePlayers()) {
             players.hidePlayer(MagicCosmetics.getInstance(), player);
         }
     }
 
-    public static void showPlayer(Player player){
-        for(Player players : Bukkit.getOnlinePlayers()){
+    public static void showPlayer(Player player) {
+        for (Player players : Bukkit.getOnlinePlayers()) {
             players.showPlayer(MagicCosmetics.getInstance(), player);
         }
     }
 
-    public static Location convertStringToLocation(String string){
+    public static Location convertStringToLocation(String string) {
         String[] strings = string.split(",");
         String world = strings[0];
         double x = Double.parseDouble(strings[1]);
         double y = Double.parseDouble(strings[2]);
         double z = Double.parseDouble(strings[3]);
-        if(strings.length > 4){
+        if (strings.length > 4) {
             float yaw = Float.parseFloat(strings[4]);
             float pitch = Float.parseFloat(strings[5]);
             return new Location(Bukkit.getWorld(world), x, y, z, yaw, pitch);
@@ -207,21 +210,24 @@ public class Utils {
         return new Location(Bukkit.getWorld(world), x, y, z);
     }
 
-    public static String convertLocationToString(Location location, boolean isBlock){
-        if(location != null){
-            if(isBlock) {
-                return location.getWorld().getName() + "," + location.getX() + "," + location.getY() + "," + location.getZ();
+    public static String convertLocationToString(Location location, boolean isBlock) {
+        if (location != null) {
+            if (isBlock) {
+                return location.getWorld().getName() + "," + location.getX() + "," + location.getY() + ","
+                        + location.getZ();
             }
-            return location.getWorld().getName()+","+location.getX()+","+location.getY()+","+location.getZ()+","+location.getYaw()+","+location.getPitch();
+            return location.getWorld().getName() + "," + location.getX() + "," + location.getY() + "," + location.getZ()
+                    + "," + location.getYaw() + "," + location.getPitch();
         }
         return "Location is Null!!";
     }
 
-    public static String ChatColor(String message){
+    public static String ChatColor(String message) {
         String version = getVersion();
-        if(version.contains("1.16") || version.contains("1.17") || version.contains("1.18") || version.contains("1.19") || version.contains("1.20") || version.contains("1.21")){
+        if (version.contains("1.16") || version.contains("1.17") || version.contains("1.18") || version.contains("1.19")
+                || version.contains("1.20") || version.contains("1.21")) {
             Matcher matcher = pattern.matcher(message);
-            while(matcher.find()){
+            while (matcher.find()) {
                 String color = message.substring(matcher.start(), matcher.end());
                 message = message.replace(color, ChatColor.of(color) + "");
                 matcher = pattern.matcher(message);
@@ -231,19 +237,20 @@ public class Utils {
     }
 
     public static int getRotation(float yaw, boolean allowDiagonals) {
-        if(allowDiagonals) return MathUtils.floor(((Location.normalizeYaw(yaw) + 180) * 8 / 360) + 0.5F) % 8;
+        if (allowDiagonals)
+            return MathUtils.floor(((Location.normalizeYaw(yaw) + 180) * 8 / 360) + 0.5F) % 8;
         return MathUtils.floor(((Location.normalizeYaw(yaw) + 180) * 4 / 360) + 0.5F) % 4;
     }
 
-    public static String bsc(String string){
+    public static String bsc(String string) {
         return new String(Base64.getDecoder().decode(string));
     }
 
     public static org.bukkit.Color hex2Rgb(String colorStr) {
         return org.bukkit.Color.fromRGB(
-                Integer.valueOf( colorStr.substring( 1, 3 ), 16 ),
-                Integer.valueOf( colorStr.substring( 3, 5 ), 16 ),
-                Integer.valueOf( colorStr.substring( 5, 7 ), 16 ) );
+                Integer.valueOf(colorStr.substring(1, 3), 16),
+                Integer.valueOf(colorStr.substring(3, 5), 16),
+                Integer.valueOf(colorStr.substring(5, 7), 16));
     }
 
     public static YamlConfiguration getPaperConfig(Server server) {
@@ -259,28 +266,30 @@ public class Utils {
         try {
             Class.forName("com.destroystokyo.paper.PaperConfig");
             return true;
-        } catch (ClassNotFoundException ignored) {}
+        } catch (ClassNotFoundException ignored) {
+        }
         try {
             Class.forName("io.papermc.paper.configuration.Configuration");
             return true;
-        } catch (ClassNotFoundException ignored) {}
+        } catch (ClassNotFoundException ignored) {
+        }
         return false;
     }
 
-    private static boolean isMajorTo181(String version) {
-        String[] partes = version.split("\\.");
-        int major = Integer.parseInt(partes[1]);
-        int minor = Integer.parseInt(partes[2]);
-        int patch = Integer.parseInt(partes[3]);
-        return major > 1 || (major == 1 && (minor > 18 || (minor == 18 && patch > 1)));
-    }
+    // private static boolean isMajorTo181(String version) {
+    //     String[] partes = version.split("\\.");
+    //     int major = Integer.parseInt(partes[1]);
+    //     int minor = Integer.parseInt(partes[2]);
+    //     int patch = Integer.parseInt(partes[3]);
+    //     return major > 1 || (major == 1 && (minor > 18 || (minor == 18 && patch > 1)));
+    // }
 
-    public static void sendMessage(CommandSender sender, String string){
-        if(sender instanceof ConsoleCommandSender){
+    public static void sendMessage(CommandSender sender, String string) {
+        if (sender instanceof ConsoleCommandSender) {
             MagicCosmetics.getInstance().getLogger().info(string);
             return;
         }
-        if(sender instanceof Player) {
+        if (sender instanceof Player) {
             Player player = (Player) sender;
             player.sendMessage(string);
         }
@@ -300,8 +309,27 @@ public class Utils {
         return new Vector(
                 (-f3 * f2 * 0.3F) + Math.cos(f5) * f6,
                 (-f1 * 0.3F + 0.1F + (random.nextFloat() - random.nextFloat()) * 0.1F),
-                (f4 * f2 * 0.3F) + Math.sin(f5) * f6
-        );
+                (f4 * f2 * 0.3F) + Math.sin(f5) * f6);
+    }
+
+    public static String itemToBase64(ItemStack item) {
+        if (item == null) return "";
+        try {
+            byte[] bytes = item.serializeAsBytes();
+            return Base64.getEncoder().encodeToString(bytes);
+        } catch (Exception e) {
+            return "";
+        }
+    }
+
+    public static ItemStack itemFromBase64(String data) {
+        if (data == null || data.isEmpty()) return null;
+        try {
+            byte[] bytes = Base64.getDecoder().decode(data);
+            return ItemStack.deserializeBytes(bytes);
+        } catch (Exception e) {
+            return null;
+        }
     }
 
 }
